# fedllm-sci4

./: HANDOFF.md  README.md  pyproject.toml
configs/experiments/: edgeiiot_fl_spectra_dp.json
data/: README.md
docs/superpowers/plans/: 2026-06-23-qwen35-final-experiment-plan.md  2026-06-24-server-experiment-execution-plan.md
docs/superpowers/specs/: 2026-05-31-spectra-dp-fedcore-design.md
paper/: Makefile  README.md  latexmkrc  main.tex  refs.bib
paper/figures/: system_overview.tex
paper/notes/: result_collection_contract.md
paper/scripts/: results_to_latex.py
paper/sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_problem.tex  04_method.tex  05_experiments.tex  06_results.tex  07_discussion.tex  08_conclusion.tex  09_reproducibility.tex  a1_additional_method.tex  a2_additional_protocol.tex
paper/tables/: dataset_protocol.tex  experiment_matrix.tex  method_components.tex  results_placeholders.tex
scripts/: run_experiment_plan.py  run_single_experiment.py
src/spectra/: __init__.py  basis.py  experiment_plan.py
tests/: test_experiment_plan.py  test_experiment_plan_cli.py  test_results_to_latex.py  test_run_single_experiment.py
